Fix header and date overlap issue.

--- a/css/config/_vars.scss
+++ b/css/config/_vars.scss
@@ -27,7 +27,7 @@ $heading-color: #ededed;
  */
 $post-bg-color: #333;
 $post-timestamp-bg-color: $base-theme-color;
-$post-padding: 1rem;
+$post-padding: 2rem 1rem;
 $post-bg-hover-color: #444;
 
 
