--- a/css/ui/_post.scss
+++ b/css/ui/_post.scss
@@ -11,6 +11,7 @@
 
 .post--multiple {
   margin-bottom: 1rem;
+  padding-top: 1rem;
   background-color: $post-bg-color;
   @include border-radius(1px);
 
